--- a/views/parc/overview.ejs
+++ b/views/parc/overview.ejs
@@ -2,7 +2,7 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <a class="thumbnail" href="#/star/{{star.id}}">
-	      <img src="/images/{{star.id}}.jpg">
+	      <img src="http://img.celepedia.de/celepedia/rest/pictures/download/{{star.imgid}}?profile=SQUARE_300_2">
 	      <div class="caption">
 	        <h3>{{star.name}}</h3>
 	      </div>
