--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -74,3 +74,48 @@ body {
    border-top: 0px;
    display: block;
  }
+ .intro {
+  text-align:center;
+  color:#fff;
+ }
+ .searchicon {
+    background: url(/images/lupe.png) right center no-repeat #fff;
+    background-size: 20px 20px;
+ }
+ .input-group {
+  margin-bottom:20px;
+  width:100%;
+ }
+ .tabselection {
+  color:#fff;
+  list-style:none;
+    padding-left: 0;
+  padding-right: 40px;
+  float:left;
+  border-bottom:1px solid white;
+  text-transform:uppercase;
+ }
+ .overviewcard {
+  position:relative;
+    h1 {
+      position: absolute;
+      left: 10px;
+      bottom: 10px;
+    color: #fff;
+    z-index: 200;
+    font-size: 20px;
+    }
+ }
+ a.thumbnail {
+  position:relative;
+  .caption {
+    position:absolute;
+    bottom:10px;
+    left:10px;
+    color:#fff;
+    h3 {
+      font-size:19px;
+      font-weight:normal;
+    }
+  }
+ }
