--- a/views/parc/star.ejs
+++ b/views/parc/star.ejs
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="background-repeat:no-repeat;background-image:url(/images/{{star.id}}.jpg);background-size:auto 100%">
+<div class="jumbotron overviewcard" style="background-repeat:no-repeat;background-image:url(/images/{{star.id}}.jpg);background-size:auto 100%">
 
   <h1>NAME</h1>
 
