--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -119,3 +119,16 @@ body {
     }
   }
  }
+ .bgimage {
+  position:absolute;
+    background: url(/images/bg_pic_blured.jpg);
+  width: 100%;
+  height: 240px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  .gradient {
+    background-image:-webkit-gradient( linear, left top, left bottom, color-stop(0, rgba(0,0,0,0)), color-stop(.7, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,1)));
+      height: 100%;
+  width: 100%;
+  }
+ }
