--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,7 +34,7 @@
   </head>
 
   <body ng-app="fysamAPP">
-
+  <div class="bgimage"><div class="gradient"></div></div>
 
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
@@ -59,15 +59,7 @@
     <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-      <div class="intro">
-          <p>Hello Viktor, ... .. ..... </p>
-      </div>
-      <div class="input-group">
-        <input type="text" class="form-control searchicon" placeholder="Auf Fysam suchen...">
-      </div><!-- /input-group -->
-      <ul class="tabselection">
-      <li>Top Stars</li>
-      </ul>
+    
       <div splashscreen></div>
       <div growl></div>
       </div>
