--- a/views/parc/overview.ejs
+++ b/views/parc/overview.ejs
@@ -1,3 +1,21 @@
+ <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+      <div class="intro">
+          <p>Hello Viktor, ... .. ..... </p>
+      </div>
+      <div class="input-group">
+        <input type="text" class="form-control searchicon" placeholder="Auf Fysam suchen...">
+      </div><!-- /input-group -->
+      <ul class="tabselection">
+      <li>Top Stars</li>
+      </ul>
+      <div splashscreen></div>
+      <div growl></div>
+      </div>
+      </div>
+    </div>
+
 <div ng-repeat="star in stars track by $index">
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
