--- a/views/parc/star.ejs
+++ b/views/parc/star.ejs
@@ -1,19 +1,19 @@
 
 
 
-<div class="jumbotron overviewcard" style="background-repeat:no-repeat;background-image:url(/images/1.jpg);background-size:auto 100%">
+<div class="row detailpage" ng-init="followed=false">
 
-  <h1>NAME</h1>
 
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
+
+  <div class="subscribecontainer col-xs-12 col-md-4">
+      <h1>{{star.name}}Rihanna</h1>
+            <div class="thankyou" ng-click="followed=!followed" ng-class="{hidden: !followed}"><div class="subscribed"></div></div>
+
+      <div class="subscribebutton" ng-click="followed=!followed"></div>
       <div class="caption">
-        <p><a class="btn btn-primary" role="button">Follow</a></p>
-        <span>Introtext</span>
+
+        <p class="biography">Introtext zum Subscriben steht hier, schön lang und irgendiwe doch kurz.</p>
       </div>
-    </div>
-  </div>
 </div>
 </div>	
 <a href="http://www.lifebuzz.com/chris-walks/">Man Walks Nearly 3000 Miles Through China. His Before & After Photos Will Shock You.</a>
