--- a/assets/styles/bootstrap/navbar.less
+++ b/assets/styles/bootstrap/navbar.less
@@ -30,7 +30,7 @@
 
 .navbar-header {
   background-color:transparent;
-  text-align:center;
+  
   &:extend(.clearfix all);
 
   @media (min-width: @grid-float-breakpoint) {
@@ -168,8 +168,8 @@
   padding: @navbar-padding-vertical @navbar-padding-horizontal;
   font-size: @font-size-large;
   line-height: @navbar-height;
-  height: @navbar-height;
-
+  height: 30px;
+  text-transform:uppercase;
   &:hover,
   &:focus {
     text-decoration: none;
