--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -96,6 +96,7 @@ body {
   text-transform:uppercase;
  }
  .detailpage {
+  margin-top:160px;
   position:relative;
     h1 {
       /*position: absolute;*/
@@ -109,12 +110,19 @@ body {
  a.thumbnail {
   position:relative;
   .caption {
+    background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0)),color-stop(.8, rgba(0,0,0,.4)), color-stop(.8, rgba(0,0,0,.4)));
     position:absolute;
-    bottom:10px;
-    left:10px;
+    bottom:0;
+    margin-left:0px;
+    left:0;
+    width:100%;
     color:#fff;
     h3 {
       font-size:19px;
+      margin-left:6px;
+      margin-bottom:11px;
+      letter-spacing: .04em;
+      text-transform: uppercase;
       font-weight:normal;
     }
   }
@@ -174,9 +182,59 @@ left:0;
   &:hover {
 
 background-position:-10px -328px;
-
-
   }
   }
-  
  }
+
+ .navbar-default .navbar-toggle:hover,.navbar-default .navbar-toggle,.navbar-default .navbar-toggle:focus {
+  background: url("/images/sprite.png") -10px -9px no-repeat transparent;
+  width: 26px;
+  margin-top:20px;
+  height: 20px;
+  background-size: 400px 1000px;
+  border:none;
+ }
+
+ .navbar-brand {
+   text-indent: -3000px;
+  display: inline-block;
+  background: url("/images/sprite.png") -220px -8px no-repeat transparent;
+  width: 90px;
+  margin-top: 20px;
+  height: 30px;
+  background-size: 400px 1000px;
+ }
+
+
+ #backbutton {
+  float:left;
+  margin-left:0;
+
+
+margin-right:11px;
+height: 22px;
+    background: url("/images/sprite.png") -133px -10px no-repeat transparent;
+  background-size: 400px 1000px;
+}
+.overview #backbutton, #backbutton.active {
+background:url("/images/sprite.png") -92px -10px no-repeat transparent;
+ background-size: 400px 1000px;
+ }
+.overview .col-xs-12{
+  padding-left:0;
+  padding-right:0;
+}
+
+.navbar-toggle {
+  margin-right:0;
+
+
+
+}
+
+.container-fluid .navbar-header {
+    margin-left: 0px;
+    border-bottom:1px solid #fff;
+    height:55px;
+  margin-right: 0px;
+}
