--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,12 +42,10 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            
           </button>
-      <a class="navbar-brand" href="#">Fysam</a>
+      <a class="navbar-brand" href="#/star/">Fysam</a>
+       <a href="#/star/" type="button" id="backbutton" class="navbar-toggle"></a>
 </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
