--- a/views/parc/star.ejs
+++ b/views/parc/star.ejs
@@ -21,6 +21,8 @@
       </div>
 </div>
 </div>	
+
+<div ng-repeat="post in posts">{{post.date | date}} | {{post.url}}</div>
 <a href="http://www.lifebuzz.com/chris-walks/">Man Walks Nearly 3000 Miles Through China. His Before & After Photos Will Shock You.</a>
 <a class="embedly-card" href="http://www.lifebuzz.com/chris-walks/">Man Walks Nearly 3000 Miles Through China. His Before & After Photos Will Shock You.</a>
 
