background image change

--- a/views/parc/overview.ejs
+++ b/views/parc/overview.ejs
@@ -22,7 +22,7 @@
 	    <a class="thumbnail" href="#/star/{{star.id}}">
 	      <img src="http://img.celepedia.de/celepedia/rest/pictures/download/{{star.imgid}}?profile=SQUARE_300_2">
 	      <div class="caption">
-	        <h3>{{star.name}}</h3>
+	        <h3>{{star.nickname}}</h3>
 	      </div>
 	    </a>
 	  </div>
