hide navigation button

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -241,3 +241,6 @@ background:url("/images/sprite.png") -92px -10px no-repeat transparent;
 .bgwhite {
   background-color:#fff;
 }
+.navbar-header button {
+  display:none;
+}
