--- a/views/parc/star.ejs
+++ b/views/parc/star.ejs
@@ -19,7 +19,7 @@
 </div>	
 
 <div class="bgwhite" ng-repeat="post in posts">
-<a class="embedly-card" href="{{post.url}}">{{star.nickname}} on Twitter</a>
+<a class="embedly-card" href="{{post.url}}"></a>
 
 </div>
 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
