--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -129,7 +129,7 @@ body {
  }
  .bgimage {
   position:absolute;
-    background: url(/images/bg_pic_blured.jpg);
+    background: url(images/bg_pic_blured.jpg);
   width: 100%;
   height: 300px;
   background-size: cover;
@@ -151,11 +151,11 @@ width:100%;
 left:0;
   .subscribed {
   
-  width: 340px;
+  max-width: 340px;
   height: 148px;
   margin: 0 auto;
   border: none;
-  background-image: url("/images/sprite.png");
+  background-image: url("images/sprite.png");
   background-position: -10px -386px;
   background-repeat: no-repeat;
   background-size: 400px 1000px;
@@ -171,11 +171,11 @@ left:0;
   }
   .subscribebutton {
     margin-bottom:20px;
-  width: 340px;
+  max-width: 340px;
   height: 39px;
   cursor: pointer;
   margin:0 auto;
-  background-image: url("/images/sprite.png");
+  background-image: url("images/sprite.png");
   background-position: -10px -271px;
   background-repeat: no-repeat;
   background-size: 400px 1000px;
@@ -187,7 +187,7 @@ background-position:-10px -328px;
  }
 
  .navbar-default .navbar-toggle:hover,.navbar-default .navbar-toggle,.navbar-default .navbar-toggle:focus {
-  background: url("/images/sprite.png") -10px -9px no-repeat transparent;
+  background: url("images/sprite.png") -10px -9px no-repeat transparent;
   width: 26px;
   margin-top:20px;
   height: 20px;
@@ -198,7 +198,7 @@ background-position:-10px -328px;
  .navbar-brand {
    text-indent: -3000px;
   display: inline-block;
-  background: url("/images/sprite.png") -220px -8px no-repeat transparent;
+  background: url("images/sprite.png") -220px -8px no-repeat transparent;
   width: 90px;
   margin-top: 20px;
   height: 30px;
@@ -213,11 +213,11 @@ background-position:-10px -328px;
 
 margin-right:11px;
 height: 22px;
-    background: url("/images/sprite.png") -133px -10px no-repeat transparent;
+    background: url("images/sprite.png") -133px -10px no-repeat transparent;
   background-size: 400px 1000px;
 }
 .overview #backbutton, #backbutton.active {
-background:url("/images/sprite.png") -92px -10px no-repeat transparent;
+background:url("images/sprite.png") -92px -10px no-repeat transparent;
  background-size: 400px 1000px;
  }
 .overview .col-xs-12{
