--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -155,7 +155,7 @@ left:0;
   height: 148px;
   margin: 0 auto;
   border: none;
-  background-image: url("images/sprite.png");
+  background-image: url("/images/sprite.png");
   background-position: -10px -386px;
   background-repeat: no-repeat;
   background-size: 400px 1000px;
@@ -175,7 +175,7 @@ left:0;
   height: 39px;
   cursor: pointer;
   margin:0 auto;
-  background-image: url("images/sprite.png");
+  background-image: url("/images/sprite.png");
   background-position: -10px -271px;
   background-repeat: no-repeat;
   background-size: 400px 1000px;
@@ -187,7 +187,7 @@ background-position:-10px -328px;
  }
 
  .navbar-default .navbar-toggle:hover,.navbar-default .navbar-toggle,.navbar-default .navbar-toggle:focus {
-  background: url("images/sprite.png") -10px -9px no-repeat transparent;
+  background: url("/images/sprite.png") -10px -9px no-repeat transparent;
   width: 26px;
   margin-top:20px;
   height: 20px;
@@ -198,7 +198,7 @@ background-position:-10px -328px;
  .navbar-brand {
    text-indent: -3000px;
   display: inline-block;
-  background: url("images/sprite.png") -220px -8px no-repeat transparent;
+  background: url("/images/sprite.png") -220px -8px no-repeat transparent;
   width: 90px;
   margin-top: 20px;
   height: 30px;
@@ -213,11 +213,11 @@ background-position:-10px -328px;
 
 margin-right:11px;
 height: 22px;
-    background: url("images/sprite.png") -133px -10px no-repeat transparent;
+    background: url("/images/sprite.png") -133px -10px no-repeat transparent;
   background-size: 400px 1000px;
 }
 .overview #backbutton, #backbutton.active {
-background:url("images/sprite.png") -92px -10px no-repeat transparent;
+background:url("/images/sprite.png") -92px -10px no-repeat transparent;
  background-size: 400px 1000px;
  }
 .overview .col-xs-12{
