--- a/views/parc/overview.ejs
+++ b/views/parc/overview.ejs
@@ -16,6 +16,16 @@
       </div>
     </div>
 
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <a class="thumbnail" href="#/show/ria">
+        <img src="http://fysam.de/images/1.jpg">
+        <div class="caption">
+          <h3>Rihanna</h3>
+        </div>
+      </a>
+    </div>
+  </div>
 <div ng-repeat="star in stars track by $index">
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
