--- a/views/parc/overview.ejs
+++ b/views/parc/overview.ejs
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-xs-12">
       <div class="intro">
-          <p>Hello Viktor, ... .. ..... </p>
+          <p>Hello Viktor, discover stars you want to follow.</p>
       </div>
       <div class="input-group">
         <input type="text" class="form-control searchicon" placeholder="Auf Fysam suchen...">
