--- a/views/parc/show.ejs
+++ b/views/parc/show.ejs
@@ -18,10 +18,21 @@
 
 $(".bgimage").css("background-image","url(http://fysam.de/images/1.jpg)");
 </script>
-<a class="embedly-card" href="https://www.youtube.com/watch?v=B3eAMGXFw1o"></a>
-<a class="embedly-card" href="https://twitter.com/rihanna/status/616468587037917184"></a>
+
+<div class="bgwhite">
+<iframe src="https://embed.spotify.com/?uri=spotify:track:5znFetnJFcs6NwKo67xlcK" width="300" height="380" frameborder="0" allowtransparency="true" style="margin:15px auto;width:100%"></iframe>
+</div>
+
+<div class="bgwhite">
 <a class="embedly-card" href="https://www.youtube.com/watch?v=5wouz4gZy_8"></a>
+</div>
+
+<div class="bgwhite">
 <a class="embedly-card" href="https://twitter.com/thefader/status/616459591774154753"></a>
+</div>
+
+<div class="bgwhite">
 <a class="embedly-card" href="http://www.bild.de/unterhaltung/musik/musik-videos/pupsende-rihanna-in-der-badewanne-41132820.bild.html"></a>
+</div>
 
 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
