--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <base href="/">
+
     <title>New Sails App</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
@@ -44,8 +46,8 @@
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             
           </button>
-      <a class="navbar-brand" href="#/star/">Fysam</a>
-       <a href="#/star/" type="button" id="backbutton" class="navbar-toggle"></a>
+      <a class="navbar-brand" href="/star/">Fysam</a>
+       <a href="/star/" type="button" id="backbutton" class="navbar-toggle"></a>
 </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
