--- a/views/parc/overview.ejs
+++ b/views/parc/overview.ejs
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="col-sm-6 col-md-4">
-      <a class="thumbnail" href="#/show/ria">
+      <a class="thumbnail" href="/show/ria">
         <img src="http://fysam.de/images/1.jpg">
         <div class="caption">
           <h3>Rihanna</h3>
@@ -29,7 +29,7 @@
 <div ng-repeat="star in stars track by $index">
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
-	    <a class="thumbnail" href="#/star/{{star.id}}">
+	    <a class="thumbnail" href="/star/{{star.id}}">
 	      <img src="http://img.celepedia.de/celepedia/rest/pictures/download/{{star.imgid}}?profile=SQUARE_300_2">
 	      <div class="caption">
 	        <h3>{{star.nickname}}</h3>
